# Evolvra

./: .env  README.md  contributing.md  gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: autonomous.py  base.py  collaborative.py
blockchain/: solana.py
config/: config.yaml
core/: neural.py  scheduler.py  state.py  tasks.py  tasks_implementations.py
examples/: basic_agent.py  multi_agent_network.py
protocols/: communications.py
tests/: additional_tests.py  test_agents.py  test_protocols.py
utils/: crypto.py  logger.py
