[tool.poetry]
name = "evolvra-ai"
version = "0.1.0"
description = "A decentralized AI agent framework built for Solana."
authors = https://x.com/evolvra_ai
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^41.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
